assets/_scss/components/_navigation.scss
#navigation {
	.nav-container {
		position: fixed;
		padding: 15px;
		height: 50px;
		width: 100%;
		top: 0;
		right: 0;
		z-index: 9998;
		&:hover {
			opacity: 1;
			@include transition(all, .1s, ease-in-out);
		}
		.menu-overlay {
			display: none;
			position: fixed;
			top: 0;
			left: 0;
			width: 100%;
			height: 100%;
			background: $bgThemeBlack50;
			z-index: 998;
		}
		.hamburger {
			position: absolute;
			display: block;
			width: 40px;
			height: 30px;
			right: 50px;
			top: 24px;
			cursor: pointer;
			opacity: 0.7;
			z-index: 999;
			@include transition(all, .2s, ease-in-out);
			&:hover {
				opacity: 1;
			}
			span {
				display: block;
				position: absolute;
				top: 10px;
				right: 1px;
				background: $white;
				@include transition(all, .5s, ease-in-out);
			}
			.span-container {
				height: 1px;
				margin-bottom: 9px;
				overflow: hidden;
				position: relative;
			}
			.span-container.sc-2 .top {
				transition-delay: 100ms;
			}
			.span-container.sc-3 .top {
				transition-delay: 200ms;
			}
			.top, .mid, .bot {
				width: 110%;
				height: 110%;
				position: absolute;
				top: 0;
				left: 0;
			}
			.top {
				background: $forestGreen;
				width: 0;
				z-index: 1;
				right: 0;
				left: auto;
			}
			.mid {
				background: #009aba;
				transition-delay: 150ms;
				animation-delay: 500ms;
			}
			.bot {
				background: #72990a;
			}
			.u-mid {
				width: 100%;
			}
			.u-top {
				width: 110%;
				right: auto;
				left: 0;
			}
			.o-white {
				background: $bgThemeBlack;
			}
		}
		.o-menu-wrapper {
			margin-top: 20px;
			animation: menuwrapper 2s linear;
			animation-fill-mode: forwards;
		}
		.u-menu-wrapper {
			margin-top: 0;
			animation: menuwrapper2 1s linear;
			animation-fill-mode: forwards;
		}
		.opacity {
			opacity: 1;
		}
		.o-white:before {
			color: $bgThemeBlack;
		}
		.menu-right {
			position: fixed;
			display: none;
			background: $bgDarkGray;
			color: $white;
			bottom: 0;
			left: 0;
			height: 100%;
			width: 100%;
			z-index: 997;
			overflow: hidden;
			//@include transition(all, 0.5s, ease-in-out);

			img {
				height: 100%;
			}

			&.o-menu-right img {
				animation: menuimage 2s 1 linear;
				animation-fill-mode: forwards;
			}
		}
		.menu {
			position: fixed;
			display: none;
			color: $white;
			top: 0;
			right: 0;
			height: 100%;
			width: 100%;
			z-index: 998;
			overflow-y: auto;
			overflow-x: hidden;
			padding: 70px 0 0;
			//@include transition(all, 0.5s, ease-in-out);
			&:before {
				position: absolute;
				top: 0;
				left: 0;
				display: block;
				background: darken($deepForestGreen, 3%);
				opacity: 0.8;
				width: 100%;
				height: 100%;
				content: '';
			}
			.menu-title {
				position: relative;
				font-size: 16px;
				text-transform: uppercase;
				letter-spacing: 1px;
				color: $white;
				@include transition(all, 0.2s, ease-in-out);
			}
			.menu-description {
				margin-top: 16px;
				font-weight: 400;
				font-size: 12px;
				opacity: 0.5;
				font-family: 'Roboto', sans-serif;
				letter-spacing: 1px;
				text-transform: uppercase;
			}
			.sub-nav-container {
				position: absolute;
				top: 80px;
				left: 0;
				width: 100%;
			}
			.sub-nav-container ul {
				display: none;
			}
			.sub-nav-container ul.opened,
			.u-nested {
				display: block;
				animation: subnav .3s 1 linear;
				animation-fill-mode: forwards;
			}
			.o-nested,
			.sub-nav-container ul.u-opened {
				animation: nested .2s 1 linear;
				animation-fill-mode: forwards;
				padding-right: 70px;
				color: $white;
				opacity: 1;
				&:hover {
					&:after {
						content: "";
						position: absolute;
						margin-left: 3em;
					}
				}
			}
			.sub-nav-container ul.u-opened {
				animation: nested2 .2s linear;
			}
			.u-nested {
				animation: subnav2 .3s linear;
			}
			.sub-nav-back {
				width: 0;
				overflow: hidden;
				position: absolute;
				top: -210px;
				left: 40px;
				padding-left: 60px;
				padding-top: 5px;
				opacity: 0.5;
				cursor: pointer;
				@include transition(all, .2s, ease-in-out);

				&:hover {
					opacity: 1;
				}

				&:hover > .greenarrow {
					margin-right:5px;
					margin-left:15px;
				}
			}
			.opened .sub-nav-back {
				animation: blind .7s 1 linear;
				animation-fill-mode: forwards;
				text-transform: uppercase;
				font-size: 12px;
				letter-spacing: 1px;
			}
			.greenarrow {
				color: #00b76e;
				left: 0;
				font-size: 30px;
				top: 6px;
				position: absolute;
				@include transition(all, .2s, ease-in-out);

				svg {
					width: 30px;
					top: -2px;
					position: relative;
				}

				svg path {
					fill: lighten($deepForestGreen, 30%);
				}
			}
			.menu-wrapper,
			.sub-nav-container ul {
				position: absolute;
			}
			ul {
				list-style: none;
				text-indent: none;
				margin: 150px 0 0;
				padding: 0;
			}
			li {
				a {
					display: block;
					padding: 20px 0 20px 200px;
					text-align: left;
					opacity: 0.6;
					font-weight: 400;
					text-decoration: none;
					&:hover {
						opacity: 1;
					}
				}
				ul {
					display: none;
					margin-top: 0;

					li {
						a {
							display: block;
							padding: 15px 0 15px 220px;
							text-align: left;
							opacity: 0.6;
							font-size: 14px;
							font-weight: 300;
							text-decoration: none;
							&:hover {
								opacity: 1;
							}
						}
					}
				}
			}
			.greenarrow-big {
				width: 30px;
				position: absolute;
				right: -6em;
				top: 2.5em;

				svg path {
					fill: lighten($deepForestGreen, 30%);
				}
			}
			.social {
				margin: 0 0 10em 12.5em;
				padding: 1em 0;
				text-align: left;
				cursor: pointer;
				span {
					display: inline-block;
					width: 25px;
					opacity: 0.6;
					@include transition(all, 0.2s, ease-in-out);
					&:hover {
						opacity: 1;
					}
				}
			}
		}
		.o-menu {
			left: 0;
			top: 0;
		}
		.o-menu-right {
			right: 0;
			bottom: 0;
		}
	}
}
.logo {
	position: absolute;
	top: 0;
	left: 0;
	background: url(img/logo-example.svg) top left no-repeat;
	height: 50px;
	margin: 15px 15px 15px 40px;
	padding: 20px 0 0 60px;
	font-size: 16px;
	font-weight: bold;
	color: $white;
	z-index: 9999;
	opacity: 0.6;
	cursor: pointer;
	@include transition(all, 0.2s, ease-in-out);
	&:hover {
		opacity: 1;
	}
}

@keyframes menuimage {
	0% {
		height: 104%;
		margin-left: -2%;
		margin-top: -2%;
		opacity: 0;
	}
	50% {
		height: 100%;
		margin-top: 0;
		margin-left: 0;
		opacity: 1;
	}
}

@keyframes menuwrapper {
	0%, 25% {
		opacity: 0;
		margin-top: 20px;
	}
	50%, 100% {
		opacity: 1;
		margin-top: 0;
	}
}

@keyframes menuwrapper2 {
	0% {
		margin-top: 0;
		opacity: 1;
	}
	30%, 100% {
		margin-top: -30px;
		opacity: 0;
	}
}

@keyframes nested {
	0% {
		opacity: 1;
		margin-top: 0;
		left: 0;
	}
	99% {
		opacity: 0;
		margin-top: 0;
		left: -100px;
	}
	100% {
		margin-top: -9999px;
	}
}

@keyframes subnav2 {
	0% {
		opacity: 0;
		left: -100px;
	}
	100% {
		opacity: 1;
		left: 0;
	}
}

@keyframes nested2 {
	0% {
		opacity: 1;
		margin-top: 0;
		left: -100px;
	}
	99% {
		opacity: 0;
		margin-top: 0;
		left: 0;
	}
	100% {
		margin-top: -9999px;
	}
}

@keyframes subnav {
	0% {
		opacity: 0;
		left: 100px;
	}
	100% {
		opacity: 1;
		left: 0;
	}
}

@keyframes blind {
	0%, 40% {
		width: 0;
	}
	100% {
		width: 150px;
	}
}

